build_error_v2.txt
   Compiling rustview v0.1.0 (C:\_new_ai_project\uriviewer)
error[E0277]: the trait bound `ShellExtension_Impl: IContextMenu_Impl` is not satisfied
    --> src\shell_ext.rs:29:1
     |
  29 | / #[implement(
  30 | |     windows::Win32::UI::Shell::IContextMenu,
  31 | |     windows::Win32::UI::Shell::IContextMenu2,
  32 | |     windows::Win32::UI::Shell::IShellExtInit
  33 | | )]
     | |__^ unsatisfied trait bound
     |
help: the trait `IContextMenu_Impl` is not implemented for `ShellExtension_Impl`
    --> src\shell_ext.rs:29:1
     |
  29 | / #[implement(
  30 | |     windows::Win32::UI::Shell::IContextMenu,
  31 | |     windows::Win32::UI::Shell::IContextMenu2,
  32 | |     windows::Win32::UI::Shell::IShellExtInit
  33 | | )]
     | |__^
help: the trait `IContextMenu_Impl` is implemented for `ShellExtension`
    --> src\shell_ext.rs:91:1
     |
  91 | impl IContextMenu_Impl for ShellExtension {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `IContextMenu_Vtbl::new`
    --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\impl.rs:4268:19
     |
4266 |     pub const fn new<Identity: windows_core::IUnknownImpl, const OFFSET: isize>() -> IContextMenu_Vtbl
     |                  --- required by a bound in this associated function
4267 |     where
4268 |         Identity: IContextMenu_Impl,
     |                   ^^^^^^^^^^^^^^^^^ required by this bound in `IContextMenu_Vtbl::new`
     = note: this error originates in the attribute macro `implement` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ShellExtension_Impl: IContextMenu2_Impl` is not satisfied
    --> src\shell_ext.rs:29:1
     |
  29 | / #[implement(
  30 | |     windows::Win32::UI::Shell::IContextMenu,
  31 | |     windows::Win32::UI::Shell::IContextMenu2,
  32 | |     windows::Win32::UI::Shell::IShellExtInit
  33 | | )]
     | |__^ unsatisfied trait bound
     |
help: the trait `IContextMenu2_Impl` is not implemented for `ShellExtension_Impl`
    --> src\shell_ext.rs:29:1
     |
  29 | / #[implement(
  30 | |     windows::Win32::UI::Shell::IContextMenu,
  31 | |     windows::Win32::UI::Shell::IContextMenu2,
  32 | |     windows::Win32::UI::Shell::IShellExtInit
  33 | | )]
     | |__^
help: the trait `IContextMenu2_Impl` is implemented for `ShellExtension`
    --> src\shell_ext.rs:218:1
     |
 218 | impl IContextMenu2_Impl for ShellExtension {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `IContextMenu2_Vtbl::new`
    --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\impl.rs:4312:19
     |
4310 |     pub const fn new<Identity: windows_core::IUnknownImpl, const OFFSET: isize>() -> IContextMenu2_Vtbl
     |                  --- required by a bound in this associated function
4311 |     where
4312 |         Identity: IContextMenu2_Impl,
     |                   ^^^^^^^^^^^^^^^^^^ required by this bound in `IContextMenu2_Vtbl::new`
     = note: this error originates in the attribute macro `implement` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ShellExtension_Impl: IShellExtInit_Impl` is not satisfied
     --> src\shell_ext.rs:29:1
      |
   29 | / #[implement(
   30 | |     windows::Win32::UI::Shell::IContextMenu,
   31 | |     windows::Win32::UI::Shell::IContextMenu2,
   32 | |     windows::Win32::UI::Shell::IShellExtInit
   33 | | )]
      | |__^ unsatisfied trait bound
      |
help: the trait `IShellExtInit_Impl` is not implemented for `ShellExtension_Impl`
     --> src\shell_ext.rs:29:1
      |
   29 | / #[implement(
   30 | |     windows::Win32::UI::Shell::IContextMenu,
   31 | |     windows::Win32::UI::Shell::IContextMenu2,
   32 | |     windows::Win32::UI::Shell::IShellExtInit
   33 | | )]
      | |__^
help: the trait `IShellExtInit_Impl` is implemented for `ShellExtension`
     --> src\shell_ext.rs:48:1
      |
   48 | impl IShellExtInit_Impl for ShellExtension {
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `IShellExtInit_Vtbl::new`
     --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\impl.rs:17165:19
      |
17163 |     pub const fn new<Identity: windows_core::IUnknownImpl, const OFFSET: isize>() -> IShellExtInit_Vtbl
      |                  --- required by a bound in this associated function
17164 |     where
17165 |         Identity: IShellExtInit_Impl,
      |                   ^^^^^^^^^^^^^^^^^^ required by this bound in `IShellExtInit_Vtbl::new`
      = note: this error originates in the attribute macro `implement` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ShellExtensionFactory_Impl: IClassFactory_Impl` is not satisfied
    --> src\lib.rs:51:1
     |
  51 | #[implement(IClassFactory)]
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `IClassFactory_Impl` is not implemented for `ShellExtensionFactory_Impl`
    --> src\lib.rs:51:1
     |
  51 | #[implement(IClassFactory)]
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: the trait `IClassFactory_Impl` is implemented for `ShellExtensionFactory`
    --> src\lib.rs:54:1
     |
  54 | impl IClassFactory_Impl for ShellExtensionFactory {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `IClassFactory_Vtbl::new`
    --> C:\Users\uripapa7\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\System\Com\impl.rs:1464:19
     |
1462 |     pub const fn new<Identity: windows_core::IUnknownImpl, const OFFSET: isize>() -> IClassFactory_Vtbl
     |                  --- required by a bound in this associated function
1463 |     where
1464 |         Identity: IClassFactory_Impl,
     |                   ^^^^^^^^^^^^^^^^^^ required by this bound in `IClassFactory_Vtbl::new`
     = note: this error originates in the attribute macro `implement` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `rustview` (lib) due to 4 previous errors
